--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "coffee-loader": "^0.8.0",
-    "coffeescript": "^1.12.7",
+    "coffeescript": "^1.12.7 || ^2.0.0-beta5",
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
